2009-02-10  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Xml/Serialization/MapSerializer.cs: range min/max should
	defaut to double min/max respectively

2009-01-24  Scott Ellington  <scott.ellington@gmail.com>

	* Xml/Serialization/MapSerializer.cs: use LocalName for xml nodes

2009-01-22  Scott Ellington  <scott.ellington@gmail.com>

	* AssemblyInfo.cs: bump version to 0.3

2009-01-16  Scott Ellington  <scott.ellington@gmail.com>

	* Xml/Serialization/MapSerializer.cs: fix utf-8 output

	* Data/KeyholeMarkupLanguage.cs: output utf-8

2009-01-16  Scott Ellington  <scott.ellington@gmail.com>

	* Xml/Serialization/MapSerializer.cs: fix locale issues

2009-01-15  Scott Ellington  <scott.ellington@gmail.com>

	* Data/KeyholeMarkupLanguage.cs: fix regression Style.id is attribute

2009-01-13  Scott Ellington  <scott.ellington@gmail.com>

	* Data/WellKnownText/SimpleFeatureAccess.cs: more locale fixes

2009-01-13  Scott Ellington  <scott.ellington@gmail.com>

	* Data/KeyholeMarkupLanguage.cs:
	* Data/WellKnownText/SimpleFeatureAccess.cs: more localization fixes

2009-01-13  Scott Ellington  <scott.ellington@gmail.com>

	* Data/WellKnownText/SimpleFeatureAccess.cs: use invariant culture to
	avoid locale problems

2009-01-12  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.csproj:
	* Data/KeyholeMarkupLanguage.cs: add back map2kml minus .net 3.5 stuff

2009-01-12  Scott Ellington  <scott.ellington@gmail.com>

	* epsg:
	* docs/epsg:
	* Cumberland.csproj: move to toplevel to workaround MD bug

2009-01-12  Scott Ellington  <scott.ellington@gmail.com>

	* docs/epsg:
	* Cumberland.csproj: add own copy of epsg codes

	* Projection/ProjFourWrapper.cs: add CustomSearchPath

2009-01-12  Scott Ellington  <scott.ellington@gmail.com>

	* Data/Shapefile/DBaseIIIFile.cs: support float column in dBase IV

2009-01-05  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs: add Clone()

2009-01-05  Scott Ellington  <scott.ellington@gmail.com>
